codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_footer_wrap.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                    
  Вопрос 1/2 (2 вопроса без ответа)
  Выберите вариант.                                 
                                                    
    1. Вариант 1  Первый вариант.                      
  › 2. Вариант 2  Второй вариант.                     
    3. Вариант 3  Третий вариант.                      
                                                    
  Tab — открыть заметки | Enter — отправить ответ         
  ←/→ — переключить вопрос | Esc — прервать
