codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Вопрос 1/1 (1 вопрос без ответа)
  Опишите детали.                                                                                                        
                                                                                                                        
  › Введите ответ (необязательно)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter — отправить ответ | Esc — прервать
