codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_hidden_options_footer.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  Вопрос 1/1 (1 вопрос без ответа)
  Что делаем дальше?                                               
                                                                                
    2. Запустить тесты      Выбрать пакет и прогнать его тесты.                           
    3. Проверить дифф  Кратко разобрать текущие изменения.                      
  › 4. Рефакторинг       Подчистить структуру и убрать мёртвый код.                   
                                                                                
  вариант 4/5 | Tab — открыть заметки | Enter — отправить ответ | Esc — прервать
