codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_long_option_text.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Вопрос 1/1 (1 вопрос без ответа)
  Выберите один вариант.                                                                                                    
                                                                                                                        
  › 1. Задача: запущена/завершена/ошибка/просрочена; Запуск/эксперимент:     Оставляем подробные асинхронные статусы:
       успешно/ошибка/неизвестно (рекомендуется для разбора долгих            так проще отслеживать прогресс и разбирать
       фоновых задач и переходов статусов)                                     ретраи, зависшие воркеры и внезапные      
                                                                                истечения срока.                           
    2. Добавить короткую модель статусов                                       Более простые ярлыки с минимумом деталей  
                                                                                для быстрых релизов.                       
                                                                                                                        
  Tab — открыть заметки | Enter — отправить ответ | Esc — прервать
