codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Вопрос 2/2 (2 вопроса без ответа)
  Опишите детали.                                                                                                        
                                                                                                                        
  › Введите ответ (необязательно)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter — отправить всё | Ctrl+P / Ctrl+N — переключить вопрос | Esc — прервать
