codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_options_notes_visible.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Вопрос 1/1 (1 вопрос без ответа)
  Выберите вариант.                                                                                                     
                                                                                                                        
  › 1. Вариант 1  Первый вариант.                                                                                          
    2. Вариант 2  Второй вариант.                                                                                         
    3. Вариант 3  Третий вариант.                                                                                          
                                                                                                                        
  › Добавить заметки                                                                                                           
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Tab или Esc — очистить заметки | Enter — отправить ответ
