codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_unanswered_confirmation.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  Отправить с вопросами без ответа?                                             
  2 вопроса без ответа
                                                                                
  › 1. Отправить  Отправить, оставив 2 вопроса без ответа.                             
    2. Вернуться  Перейти к первому вопросу без ответа.                        
                                                                                
                                                                                
                                                                                
                                                                                
  Нажмите Enter для подтверждения или Esc для возврата
