codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_wrapped_options.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                              
  Вопрос 1/1 (1 вопрос без ответа)
  Выберите следующий шаг для этой задачи.                                                                         
                                                                                                              
  › 1. Обсудить изменение кода  Пройдёмся по плану, затем реализуем и тщательно проверим.            
    2. Запустить точечные тесты     Выберем самый подходящий пакет и сначала проверим текущее поведение.           
    3. Проверить дифф        Суммируем изменения и выделим самые важные риски и пробелы.          
                                                                                                              
  Tab — открыть заметки | Enter — отправить ответ | Esc — прервать
